Fix canImportFromPACS null in Keycloak, after refactoring